--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>WhatsApp Web Clone</title>
+    <title>Chat Scheduler</title>
     <link rel="stylesheet" href="/style.css">
     <!-- Socket.io -->
     <script src="/socket.io/socket.io.js"></script>
